--- a/pom.xml
+++ b/pom.xml
@@ -91,19 +91,15 @@
 
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-api</artifactId>
-            <version>2.14.1</version> <!-- Kullandığınız sürümü belirtin -->
-        </dependency>
-        <dependency>
-            <groupId>org.apache.logging.log4j</groupId>
-            <artifactId>log4j-core</artifactId>
-            <version>2.14.1</version> <!-- Kullandığınız sürümü belirtin -->
+            <artifactId>log4j-1.2-api</artifactId>
+            <version>2.17.2</version>
         </dependency>
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-slf4j-impl</artifactId>
-            <version>2.14.1</version> <!-- Kullandığınız Log4j sürümüne uygun versiyonu belirtin -->
+            <version>2.17.2</version>
         </dependency>
+
     </dependencies>
     <build>
         <plugins>
