--- a/pom.xml
+++ b/pom.xml
@@ -82,7 +82,7 @@
         <dependency>
             <groupId>org.apache.logging.log4j</groupId>
             <artifactId>log4j-core</artifactId>
-            <version>2.17.2</version> <!-- Güncel bir versiyon seçin -->
+            <version>2.17.2</version>
         </dependency>
     </dependencies>
     <build>
